# tensor-eqs-mcts

./: .gitmodules  LICENSE  README.md
egg/src/: egraph.rs  extract.rs  lib.rs  lp_extract.rs  util.rs
experiments/: analyze_results.ipynb  deduplicate_results.ipynb  requirements.txt
rmcts/: Cargo.toml  LICENSE  README.md  run_experiments.sh
rmcts/src/: custom_models.rs  eg_env.rs  env.rs  lib.rs  main.rs  math.rs  node.rs  pool_manager.rs  prop.rs  run.rs  tree.rs  utils.rs  workers.rs
rmcts/tests/: math.rs  prop.rs  simple.rs
tensat/: Cargo.toml  converted_multi_nasrnn.txt  run_exp_main.sh  taso_bindings.rs
tensat/docker/: Dockerfile  run_docker.sh
tensat/extractor/: extract.py
tensat/src/: bert.rs  inceptionv3.rs  lib.rs  main.rs  mobilenetv2.rs  model.rs  nasneta.rs  nasrnn.rs  optimize.rs  parse.rs  resnet50.rs  resnext50.rs  rewrites.rs  squeezenet.rs  utils.rs  vgg.rs
